--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -3,7 +3,7 @@
 {% block project_written_content %}
 <p>
     A simple microblogging site. A post is read by python / flask and then saved
-    into a MongoDB database. Previous posts are read by python / flask from the database and
+    into a MongoDB Cloud Atlas database. Previous posts are read by python / flask from the database and
     are displayed on the page where they can be seen and deleted.
 </p>
 <div class="my-project-microblog-diagram-wrapper">
