--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,64 +4,56 @@
 {% block content %}
 <main class="w3-container my-home-page-container my-home-page-limit-width">
     <div class="w3-margin-left">
-        <div class="w3-panel w3-theme-l5 w3-leftbar w3-border-black">
-            <p>A portfolio site to showcase my web development projects.</p>
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+            <p>A <strong>portfolio site</strong> to showcase my web development projects.</p>
         </div>
-        <div class="w3-panel w3-theme-l3 w3-leftbar w3-border-black">
-            <p>Site is fully responsive and built with a mobile-first design.</p>
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+            <p>This site and all projects are fully responsive and built with a <strong>mobile-first</strong> design.</p>
         </div>
-        <div class="w3-panel w3-theme-l5 w3-leftbar w3-border-black">
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Python, Flask, HTML and CSS were the technologies used to build this site.
+                I have <strong>extensive work experience</strong> in sectors such as academia, oil and gas, broadcast
+                technology
+                and finance.
             </p>
-            <div class="w3-cell-row">
+            <p>
+                During this experience, I made use of numerous programming languages, in particular
+                <strong>C</strong> and <strong>Perl</strong>.
+            </p>
+        </div>
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+            <p>
+                Python, Flask, HTML and CSS were used to build this site.
+            </p>
+            <div class="my-home-flexbox-for-technology-images">
                 <img src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
-                    class="w3-cell my-home-page-images-python-flask" alt="python image">
+                    class="my-home-page-technology-images" alt="python image">
                 <img src="{{ url_for('static', filename='images/flask-removebg-preview.png') }}"
-                    class="w3-cell my-home-page-images-python-flask" alt="flask image">
+                    class="my-home-page-technology-images" alt="flask image">
                 <img src="{{ url_for('static', filename='images/html5-removebg-preview.png') }}"
-                    class="w3-cell my-home-page-images-html-css" alt="html image">
+                    class="my-home-page-technology-images" alt="html image">
                 <img src="{{ url_for('static', filename='images/css3-removebg-preview.png') }}"
-                    class="w3-cell my-home-page-images-html-css" alt="css image">
+                    class="my-home-page-technology-images" alt="css image">
             </div>
             <p>
                 Deployed to <em>render.com</em> and a custom domain name linked.
             </p>
         </div>
-        <div class="w3-panel w3-theme-l3 w3-leftbar w3-border-black">
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
                 Additional bootcamp completion certificates awarded for:
             </p>
             <ul>
-                <li>Python</li>
-                <li>SQL</li>
-                <li>JavaScript</li>
+                <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
+                <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
+                <li><strong>JavaScript</strong> "Data Structures and Algorithms" (FreeCodeCamp)</li>
             </ul>
-            <p>
-                on Udemy and FreeCodeCamp.
-            </p>
         </div>
-        <div class="w3-panel w3-theme-l5 w3-leftbar w3-border-black">
-            <p>
-                <a href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}" target="_blank"
-                    rel="noopener noreferrer">
-                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">
-                        CV</span></a>
-
-            </p>
-        </div>
-        <p>
-            Improvements: could add user authentication to microblog, each user access to own DB.
-        </p>
-        <p>
-            Backup site, run from vscode with github links
-        </p>
-        <p>
-            SQLite3 ReplIT
-        </p>
-        <p>
-            Best to include phone number on CV too.
-            Pat's partner no issue having done that.
+        <p class="my-home-bottom-of-page-paragraph">
+            <a href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}" target="_blank"
+                rel="noopener noreferrer">
+                <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">Download CV</span>
+            </a>
         </p>
     </div>
 </main>
