minor content changes

--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -2,9 +2,8 @@
 
 {% block project_written_content %}
 <p>
-    A simple microblogging site. A post is read by python / flask and then saved
-    into a MongoDB Cloud Atlas database. Previous posts are read by python / flask from the database and
-    are displayed on the page where they can be seen and deleted.
+    A simple microblogging site. A post is read by Python / Flask and then saved
+    into a MongoDB Cloud Atlas database. Previous posts are read by Python / Flask from the database and are displayed on the page where they can be seen and deleted.
 </p>
 <div class="my-project-microblog-diagram-wrapper">
     <img class="my-project-microblog-diagram" src="{{ url_for('static', filename='images/microblog.drawio.png') }}"
