--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -3,14 +3,13 @@
 {% block project_written_content %}
 <p>
     A Python command line interface for querying a SQLite film database.
-    Pandas library used for table formatting. Code is hosted on Replit and
-    embedded on a webpage for easy access.
+    Pandas library used for table formatting. Code is hosted on Replit.
 </p>
 <p>
-    The website is just a placeholder for the Replit hosted code, for demonstration
-    purposes only. The webpage is not responsive or mobile friendly.
+    The website is just a placeholder for the Replit code, for demonstration
+    purposes only. The webpage is not responsive nor mobile friendly.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQL</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQLite</div>
 {% endblock %}
