--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,12 +14,12 @@
                 and finance.
             </p>
             <p>
-                During this experience, I made use of numerous programming languages, in particular
-                <strong>C</strong> and <strong>Perl</strong>.
+                I have made use of various programming languages throughout my career,
+                but my main two were <strong>C</strong> and <strong>Perl</strong>.
             </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>This site and all projects are fully responsive and built with a <strong>mobile-first</strong> design.</p>
+            <p>This site and all projects are <strong>fully responsive</strong> and built with a <strong>mobile-first</strong> design.</p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
