--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
             </p>
             <p>
                 I have made use of various programming languages throughout my career,
-                but my main two were <strong>C</strong> and <strong>Perl</strong>.
+                but primarily <strong>C</strong> and <strong>Perl</strong>.
             </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
@@ -25,7 +25,7 @@
             <p>
                 Python, Flask, HTML and CSS were used to build this site.
             </p>
-            <div class="my-home-flexbox-for-technology-images">
+            <div class="my-home-flexbox-for-technology-images w3-margin-bottom">
                 <img src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
                     class="my-home-page-technology-images" alt="python image">
                 <img src="{{ url_for('static', filename='images/flask-removebg-preview.png') }}"
@@ -35,9 +35,9 @@
                 <img src="{{ url_for('static', filename='images/css3-removebg-preview.png') }}"
                     class="my-home-page-technology-images" alt="css image">
             </div>
-            <p>
-                Deployed to <em>render.com</em> and a custom domain name linked.
-            </p>
+            <!-- <p>
+                Deployed to <em>render.com</em> and a custom domain name added.
+            </p> -->
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
@@ -46,6 +46,11 @@
             <ul>
                 <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
+            </ul>
+            <p>
+                Additional bootcamp almost complete:
+            </p>
+            <ul>
                 <li><strong>JavaScript</strong> "Data Structures and Algorithms" (FreeCodeCamp)</li>
             </ul>
         </div>
