removing media query info. Links to Replit code.

--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -3,11 +3,13 @@
 {% block project_written_content %}
 <p>
     A Python command line interface for querying a SQLite film database.
-    Pandas library used for table formatting. Code is hosted on Replit.
+    Pandas library used for table formatting.
+    Code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
 </p>
 <p>
-    The website is just a placeholder for the Replit code, for demonstration
-    purposes only. The webpage is not responsive nor mobile friendly.
+    The website is just a place-holder for the
+    <a href="https://replit.com/@koalaTreeBear/filmdatabase">Replit code</a> -
+    the website is <strong>not responsive nor mobile friendly</strong>.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
