--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -48,7 +48,7 @@
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
             </ul>
             <p>
-                Additional bootcamp almost complete:
+                Additional bootcamp ongoing (almost complete):
             </p>
             <ul>
                 <li><strong>JavaScript</strong> "Data Structures and Algorithms" (FreeCodeCamp)</li>
