--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -3,7 +3,7 @@
 {% block project_written_content %}
 <p>
     A dice game for two players that stores the results in the browser's local storage "database".
-    The results persist even after browser or computer shutdown.
+    The results persist even after browser or device shutdown.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
