--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -7,11 +7,11 @@
     Code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
 </p>
 <p>
-    The website is just a place-holder for the
+    The production website is just a place-holder for the
     <a href="https://replit.com/@koalaTreeBear/filmdatabase">Replit code</a> -
-    the website is <strong>not responsive nor mobile friendly</strong>.
+    it is <strong>not responsive nor mobile friendly</strong>.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQLite</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQL</div>
 {% endblock %}
