reordering the "technologies used" tags.

--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -5,7 +5,8 @@
     A dice game for two players that stores the results in the browser's local storage "database".
     The results persist even after browser or device shutdown.
 </p>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">W3.CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 {% endblock %}
