--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -14,4 +14,5 @@
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">SQL</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">Replit</div>
 {% endblock %}
