--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -5,9 +5,9 @@
     Copy the colour pattern generated. The more you correctly match the pattern, the longer the pattern gets.
     How many levels can you complete?
 </p>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">SASS</div>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">jQuery</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">jQuery</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">Sass</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
 {% endblock %}
