--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -9,7 +9,8 @@
 <p>
     The production website is just a place-holder for the
     <a href="https://replit.com/@koalaTreeBear/filmdatabase">Replit code</a> -
-    it is <strong>not responsive nor mobile friendly</strong>.
+    it is <strong>not responsive nor mobile friendly</strong>. Tables best viewed
+    on screen widths of <strong>700 pixels</strong> plus.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
