--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,8 +4,21 @@
 {% block content %}
 <main class="w3-container my-home-page-container my-home-page-limit-width">
     <div class="w3-margin-left">
+        <img src="../static/images/portrait-wee.png" alt="hero portrait" class="my-home-page-hero-images w3-round">
+
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>A <strong>portfolio site</strong> to showcase my web development projects.</p>
+            <p>My <strong>portfolio</strong> site to showcase projects developed during
+                an intensive three-month <strong>JustIT</strong> bootcamp.
+            </p>
+        </div>
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+            <p>The bootcamp focused on five distinct technologies:
+                <strong>JavaScript</strong>,
+                <strong>Python</strong>,
+                <strong>SQL</strong>,
+                <strong>CSS</strong> and
+                <strong>HTML</strong>.
+            </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
@@ -17,13 +30,16 @@
                 I have made use of various programming languages throughout my career,
                 but primarily <strong>C</strong> and <strong>Perl</strong>.
             </p>
-        </div>
-        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>This site and all projects are <strong>fully responsive</strong> and built with a <strong>mobile-first</strong> design.</p>
+            <p>
+                <a href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}" target="_blank"
+                    rel="noopener noreferrer">
+                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View CV</span>
+                </a>
+            </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Python, Flask, HTML and CSS were used to build this site.
+                Python, Flask, HTML and CSS were used to <strong>build this site</strong>.
             </p>
             <div class="my-home-flexbox-for-technology-images w3-margin-bottom">
                 <img src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
@@ -35,9 +51,10 @@
                 <img src="{{ url_for('static', filename='images/css3-removebg-preview.png') }}"
                     class="my-home-page-technology-images" alt="css image">
             </div>
-            <!-- <p>
-                Deployed to <em>render.com</em> and a custom domain name added.
-            </p> -->
+        </div>
+        <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+            <p>This site and all projects are <strong>fully responsive</strong> and built with a
+                <strong>mobile-first</strong> design.</p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
@@ -54,12 +71,6 @@
                 <li><strong>JavaScript</strong> "Data Structures and Algorithms" (FreeCodeCamp)</li>
             </ul>
         </div>
-        <p class="my-home-bottom-of-page-paragraph">
-            <a href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}" target="_blank"
-                rel="noopener noreferrer">
-                <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">Download CV</span>
-            </a>
-        </p>
     </div>
 </main>
 {% endblock %}
