--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <main class="w3-container my-home-page-container my-home-page-limit-width">
     <div class="w3-margin-left">
-        <img src="../static/images/portrait-wee.png" alt="hero portrait" class="my-home-page-hero-images w3-round">
+        <img src="../static/images/portrait.png" alt="hero image portrait" class="my-home-page-hero-images w3-round">
 
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>My <strong>portfolio</strong> site to showcase projects developed during
