--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,12 +7,16 @@
         <img src="../static/images/portrait.png" alt="hero image portrait" class="my-home-page-hero-images w3-round">
 
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>My <strong>portfolio</strong> site to showcase projects developed during
-                an intensive three-month <strong>JustIT</strong> bootcamp.
+            <p>Hi, I'm Stewart Fraser. This is my <strong>portfolio</strong> site, where I showcase the projects I developed during
+                an intensive three-month <strong>JustIT</strong> software development bootcamp.
+            </p>
+            <p>
+                Alongside coding, I am also <strong>passionate</strong> about my family, playing
+                football and chess.
             </p>
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
-            <p>The bootcamp focused on five distinct technologies:
+            <p>The JustIT bootcamp focused on five popular technologies:
                 <strong>JavaScript</strong>,
                 <strong>Python</strong>,
                 <strong>SQL</strong>,
@@ -27,8 +31,8 @@
                 and finance.
             </p>
             <p>
-                I have made use of various programming languages throughout my career,
-                but primarily <strong>C</strong> and <strong>Perl</strong>.
+                I have used numerous programming languages throughout my career,
+                but mostly <strong>C</strong> and <strong>Perl</strong>.
             </p>
             <p>
                 <a href="{{ url_for('static', filename='docs/Stewart-Fraser-CV.pdf') }}" target="_blank"
@@ -39,7 +43,7 @@
         </div>
         <div class="w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
             <p>
-                Python, Flask, HTML and CSS were used to <strong>build this site</strong>.
+                Python, Flask, HTML and CSS were used to <strong>build this portfolio site</strong>.
             </p>
             <div class="my-home-flexbox-for-technology-images w3-margin-bottom">
                 <img src="{{ url_for('static', filename='images/python-removebg-preview.png') }}"
@@ -63,7 +67,11 @@
             <ul>
                 <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
-            </ul>
+            </ul><p>
+                <a href="{{ url_for('certificates') }}">
+                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Certificates</span>
+                </a>
+            </p>
             <p>
                 Additional bootcamp ongoing (almost complete):
             </p>
