--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -2,7 +2,7 @@
 
 {% block project_written_content %}
 <p>
-    Copy the colour pattern generated. The more you correctly match the pattern, the longer the pattern gets.
+    A JavaScript implementation of the Simon Memory Game. Copy the generated colour pattern. The more you correctly match the pattern, the longer the pattern gets.
     How many levels can you complete?
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
