--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,7 +2,7 @@
 
 <!-- The body for the contact page. -->
 {% block content %}
-<main class="w3-container w3-margin-bottom w3-margin-left">
+<main class="w3-container w3-margin-bottom">
     <div class="w3-container my-contact-container">
         <a href="mailto:s.i.fraser@outlook.com" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
             Email</a>
