content update for projects.

--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -2,9 +2,12 @@
 
 {% block project_written_content %}
 <p>
-    A dice game for two players that stores the results in the browser's local storage "database".
-    The results persist even after browser or device shutdown.
+    A dice game for two players to showcase persistent storage.
+    The results of each dice roll are saved in the browser's local storage "database".
 </p>
+    <p>
+    These results will persist even after browser or device shutdown.
+    </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">W3.CSS</div>
