--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -2,9 +2,10 @@
 
 {% block project_written_content %}
 <p>
-    A Python command line interface for querying a SQLite film database.
-    Pandas library used for table formatting.
-    Code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
+    A Python program for querying a SQLite film database. The user can perform CRUD operations on the database via a command
+    line interface.
+    Pandas library is used for formatting the tables.
+    The source code is <a href="https://replit.com/@koalaTreeBear/filmdatabase">hosted on Replit</a>.
 </p>
 <p>
     The production website is just a place-holder for the
