--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -4,7 +4,21 @@
 {% block content %}
 <div class="w3-container">
 
-    <div class="w3-container w3-shadow">
+    <div class="w3-container">
+        <h3>
+            <u><em>JustIT Software Development Bootcamp</em></u>
+        </h3>
+        <p>
+            "In-person three-month intensive bootcamp focusing on Python, JavaScript, SQL, CSS and HTML."
+        </p>
+        <a href="{{ url_for('static', filename='docs/cert-justIT-bootcamp-completion.pdf') }}" target="_blank"
+            rel="noopener noreferrer">
+            <img src="../static/docs/cert-justIT-bootcamp-completion.jpg" alt="python certificate"
+                class="my-certificates-image-justit w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+        </a>
+    </div>
+
+    <div class="w3-container w3-margin-top">
         <h3>
             <u><em>Online Python Bootcamp</em></u>
         </h3>
@@ -14,9 +28,10 @@
         <a href="{{ url_for('static', filename='docs/cert-python-portilla.pdf') }}" target="_blank"
             rel="noopener noreferrer">
             <img src="../static/docs/cert-python-portilla.png" alt="python certificate"
-                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+                class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
         </a>
     </div>
+
     <div class="w3-container w3-margin-top">
         <h3>
             <u><em>Online SQL Bootcamp</em></u>
@@ -27,9 +42,10 @@
         <a href="{{ url_for('static', filename='docs/cert-sql-portilla.pdf') }}" target="_blank"
             rel="noopener noreferrer">
             <img src="../static/docs/cert-sql-portilla.png" alt="sql certificate"
-                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
+                class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
         </a>
     </div>
+
 </div>
 
 {% endblock %}
