Bootcamp certificates tidy up

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -5,8 +5,12 @@
 <div class="w3-container">
 
     <div class="w3-container">
+        <h2>
+            Bootcamp Certificates
+        </h2>
+
         <h3>
-            <u><em>JustIT Software Development Bootcamp</em></u>
+            <em>JustIT Software Development Bootcamp</em>
         </h3>
         <p>
             "In-person three-month intensive bootcamp focusing on Python, JavaScript, SQL, CSS and HTML."
@@ -20,7 +24,7 @@
 
     <div class="w3-container w3-margin-top">
         <h3>
-            <u><em>Online Python Bootcamp</em></u>
+            <em>Online Python Bootcamp</em>
         </h3>
         <p>
             "Begin with the basics of Python and progress to creating your own applications and games."
@@ -34,7 +38,7 @@
 
     <div class="w3-container w3-margin-top">
         <h3>
-            <u><em>Online SQL Bootcamp</em></u>
+            <em>Online SQL Bootcamp</em>
         </h3>
         <p>
             "Become an expert at SQL using PostgreSQL and PgAdmin".
