--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -69,7 +69,7 @@
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
             </ul><p>
                 <a href="{{ url_for('certificates') }}">
-                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Certificates</span>
+                    <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Bootcamp Certificates</span>
                 </a>
             </p>
         </div>
