adding PDF scan of JustIT completion certificate (looks better).

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -15,9 +15,9 @@
         <p>
             "In-person three-month intensive bootcamp focusing on Python, JavaScript, SQL, CSS and HTML."
         </p>
-        <a href="{{ url_for('static', filename='docs/cert-justIT-bootcamp-completion.pdf') }}" target="_blank"
+        <a href="{{ url_for('static', filename='docs/cert-justIT-completion-certificate.pdf') }}" target="_blank"
             rel="noopener noreferrer">
-            <img src="../static/docs/cert-justIT-bootcamp-completion.jpg" alt="python certificate"
+            <img src="../static/docs/cert-justIT-completion-certificate.png" alt="python certificate"
                 class="my-certificates-image-justit w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black">
         </a>
     </div>
